[package]
name = "actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

tokio = { version = "1.40", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

dotenvy = "0.15"
